--- a/src/less/card.less
+++ b/src/less/card.less
@@ -1,5 +1,8 @@
-.card-question {
-  &:hover {
-    cursor: pointer;
+.carte {
+  min-height: 40px;
+  .card-question {
+    &:hover {
+      cursor: pointer;
+    }
   }
 }
