--- a/src/less/global.less
+++ b/src/less/global.less
@@ -18,3 +18,17 @@
   float: left !important;
   margin-right: 20px;
 }
+/* icons **************************************/
+.arrow {
+  font-size: 2em;
+  &:hover {
+    cursor: pointer;
+  }
+  svg {
+    vertical-align: top !important;
+  }
+}
+/* propriétés de boîte ************************/
+.pl-50 {
+  padding-left: 50px;
+}
