--- a/src/css/style.css
+++ b/src/css/style.css
@@ -10,6 +10,14 @@
   }
 }
 /* general */
+/* :root {
+  font-size: 62.5%;
+  body {
+    margin: 0;
+    // Body font size 16px
+    font-size: 1.6rem;
+  }
+} */
 .right {
   float: right !important;
   margin-left: 20px;
@@ -32,9 +40,83 @@
 .pl-50 {
   padding-left: 50px;
 }
+/* Header *************************************/
+#main-header {
+  display: flex;
+  justify-content: center;
+}
+#main-header h1 {
+  max-width: 50%;
+}
+#main-header h1 #m-memo {
+  position: relative;
+  top: 6px;
+}
+#main-header h2 {
+  font-size: 0.875rem;
+}
+#main-header #icon-user {
+  margin-left: 50px;
+  color: white;
+  font-size: 2em;
+  margin-top: 10px;
+}
+/* formulaire de connexion ********************/
+#login-form {
+  margin-top: 1rem;
+  display: flex;
+  justify-content: center;
+}
+/* Formulaire de modification / ajout */
+#add-or-edit-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+#add-or-edit-card .div-label-form label {
+  display: flex;
+  flex-direction: row;
+}
+#add-or-edit-card input,
+#add-or-edit-card textarea {
+  width: 80%;
+}
+#add-or-edit-card .button-normal-size {
+  max-width: 50%;
+  margin: 0 auto;
+}
+/* Termes des thématiques *********************/
+#section-terms {
+  display: flex;
+  justify-content: center;
+}
 .carte {
   min-height: 40px;
 }
 .carte .card-question:hover {
   cursor: pointer;
+}
+.section-cards {
+  display: flex;
+  justify-content: space-between;
+}
+.section-cards > .section-card {
+  flex-basis: 0px;
+  flex-grow: 1;
+  margin: 0 10px;
+  flex-shrink: 1;
+}
+@media screen and (max-width: 768px) {
+  .section-cards > .section-card {
+    width: 100vw;
+    min-width: 93vw;
+  }
+}
+@media screen and (max-width: 768px) {
+  .section-cards {
+    width: 95vw;
+    min-width: 95vw;
+    overflow-x: auto;
+    overflow-y: hidden;
+  }
 }
