--- a/src/less/card.less
+++ b/src/less/card.less
@@ -9,6 +9,7 @@
 .section-cards {
   display: flex;
   justify-content: space-between;
+  flex-wrap: nowrap !important;
   > .section-card {
     flex-basis: 0px;
     flex-grow: 1;
