--- a/src/less/global.less
+++ b/src/less/global.less
@@ -100,10 +100,10 @@
   .button-normal-size {
     max-width: 50%;
     margin: 0 auto;
-  }
-}
-/* Termes des thématiques *********************/
-#section-terms {
+  }#section-terms {
   display: flex;
   justify-content: center;
 }
+}
+/* Termes des thématiques *********************/
+
